# fuquila-pp-py

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: beatmap.rs  calculator.rs  diff_attrs.rs  error.rs  lib.rs  map_attrs.rs  perf_attrs.rs  strains.rs
