[package]
name = "fuquila-pp-py"
version = "0.9.5"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>", "Aochi <aochi@fuquila.net>"]
license = "MIT"
edition = "2021"

[lib]
name = "fuquila_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
fuquila-pp = { git = "https://github.com/osufuquila/fuquila-pp-rs", rev = "6c6dc30f3c760be4b6b7ec14e76d5eb536444212" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
